tests/parser/should_fail/T8501b.stderr

T8501b.hs:5:9: error: [GHC-58481]
    parse error on input ‘<-’
    Suggested fix:
      Perhaps you intended to use the ‘RecursiveDo’ extension
